<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <DatePicker
        android:id="@+id/datePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TimePicker
        android:id="@+id/TimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        app:layout_constraintTop_toBottomOf="@id/datePicker1"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        app:layout_constraintTop_toBottomOf="@id/TimePicker"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:inputType="numberSigned"
        android:hint="@string/hint"
        app:layout_constraintStart_toEndOf="@id/textView4"
        app:layout_constraintBottom_toBottomOf="@id/textView4"
        app:layout_constraintTop_toTopOf="@id/textView4"
        android:autofillHints="" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempC"
        app:layout_constraintStart_toEndOf="@id/editTextTextPersonName"
        app:layout_constraintTop_toTopOf="@id/editTextTextPersonName"
        app:layout_constraintBottom_toBottomOf="@id/editTextTextPersonName"
        />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vitesse_du_vent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/textView5"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:inputType="numberSigned"
        android:hint="@string/hint"
        app:layout_constraintStart_toEndOf="@id/textView6"
        app:layout_constraintBottom_toBottomOf="@id/textView6"
        app:layout_constraintTop_toTopOf="@id/textView6"
        android:autofillHints="" />
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/km_h"
        app:layout_constraintStart_toEndOf="@id/editText"
        app:layout_constraintTop_toTopOf="@id/editText"
        app:layout_constraintBottom_toBottomOf="@id/editText"
        />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/Temps"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/textView6"
        app:layout_constraintEnd_toEndOf="@id/textView7"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>